# windows-agent

./: .env  .env.example  AGENT_SPEC.md  PLAN.md  README.md  STATUS.md  pyproject.toml
integrate_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: run_server.cmd  run_tray.cmd  setup_windows.cmd
server/: auth.py  config.py  executor.py  keypress.py  logging_conf.py  main.py  models.py  voicemeeter.py
tray/: log_viewer.py  tray_app.py
